--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">DZAN</string>
+    <string name="pause_count">"Pause Count %1$d"</string>
+    <string name="ffwdbtn_count">"ffwdBtn Count %1$d"</string>
+    <string name="rewbtn_count">"rewBtn Count %1$d"</string>
 </resources>
